# yalb

./: README.md  meson.build
executables/: main.cpp  meson.build
src/: hello.cpp  hello.h  meson.build
subprojects/: kokkos.wrap
tests/: gtest_main.cpp  meson.build  test_hello_world.cpp
